module(name = "com_github_dolthub_dolt_proto")

bazel_dep(name = "com_github_dolthub_dolt_go_serial")

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "protobuf", version = "33.5")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_google_grpc", "org_golang_google_protobuf")

