load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "dolt.go",
        "fileno_check.go",
        "fileno_check_darwin.go",
        "fileno_check_linux.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/cmd/dolt",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cmd/dolt/cli:go_default_library",
        "//go/cmd/dolt/commands:go_default_library",
        "//go/cmd/dolt/commands/cnfcmds:go_default_library",
        "//go/cmd/dolt/commands/credcmds:go_default_library",
        "//go/cmd/dolt/commands/schcmds:go_default_library",
        "//go/cmd/dolt/commands/sqlserver:go_default_library",
        "//go/cmd/dolt/commands/tblcmds:go_default_library",
        "//go/libraries/doltcore/dbfactory:go_default_library",
        "//go/libraries/doltcore/doltdb:go_default_library",
        "//go/libraries/doltcore/env:go_default_library",
        "//go/libraries/events:go_default_library",
        "//go/libraries/utils/filesys:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_liquidata_inc_dolt_go_gen_proto_dolt_services_eventsapi//v1alpha1:go_default_library",
        "@com_github_pkg_profile//:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "dolt",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
