load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["git-dolt-smudge.go"],
    importpath = "github.com/liquidata-inc/dolt/go/cmd/git-dolt-smudge",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cmd/git-dolt/config:go_default_library",
        "//go/cmd/git-dolt/doltops:go_default_library",
        "//go/cmd/git-dolt/utils:go_default_library",
    ],
)

go_binary(
    name = "git-dolt-smudge",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
