load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["git-dolt.go"],
    importpath = "github.com/liquidata-inc/dolt/go/cmd/git-dolt",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cmd/git-dolt/commands:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "git-dolt",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
