load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "str_to_noms.go",
        "type_conversion.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/libraries/doltcore",
    visibility = ["//visibility:public"],
    deps = ["//go/store/types:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "str_to_noms_test.go",
        "type_conversion_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/store/types:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
