load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "collector.go",
        "context.go",
        "emitter.go",
        "event_flush.go",
        "events.go",
        "file_backed_proc.go",
        "metrics.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/libraries/events",
    visibility = ["//visibility:public"],
    deps = [
        "//go/libraries/utils/filesys:go_default_library",
        "//go/libraries/utils/iohelp:go_default_library",
        "@com_github_denisbrodbeck_machineid//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_juju_fslock//:go_default_library",
        "@com_github_liquidata_inc_dolt_go_gen_proto_dolt_services_eventsapi//v1alpha1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "event_flush_test.go",
        "events_test.go",
        "file_backed_proc_test.go",
        "metrics_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/libraries/utils/filesys:go_default_library",
        "//go/libraries/utils/test:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_liquidata_inc_dolt_go_gen_proto_dolt_services_eventsapi//v1alpha1:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
