load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "benchmarks.go",
        "dataset.go",
        "helpers.go",
        "main.go",
        "results.go",
        "seed_schema.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/performance/benchmarks",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cmd/dolt/commands:go_default_library",
        "//go/cmd/dolt/commands/tblcmds:go_default_library",
        "//go/libraries/doltcore/dbfactory:go_default_library",
        "//go/libraries/doltcore/doltdb:go_default_library",
        "//go/libraries/doltcore/env:go_default_library",
        "//go/libraries/doltcore/sql:go_default_library",
        "//go/libraries/utils/filesys:go_default_library",
        "//go/libraries/utils/test:go_default_library",
        "//go/store/types:go_default_library",
    ],
)

go_binary(
    name = "benchmarks",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
