load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "blobstore.go",
        "errors.go",
        "gcs.go",
        "inmem.go",
        "local.go",
        "range.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/blobstore",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_juju_fslock//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["blobstore_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
    ],
)
