load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "chunk.go",
        "chunk_serializer.go",
        "chunk_store.go",
        "memory_store.go",
        "remote_requests.go",
        "test_utils.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/chunks",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/constants:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/hash:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "chunk_serializer_test.go",
        "chunk_store_common_test.go",
        "chunk_test.go",
        "memory_store_test.go",
        "remote_requests_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/store/constants:go_default_library",
        "//go/store/hash:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
