load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "resolver.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/chunks:go_default_library",
        "//go/store/datas:go_default_library",
        "//go/store/spec:go_default_library",
        "//go/store/types:go_default_library",
        "//go/store/util/verbose:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "resolver_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/libraries/utils/osutil:go_default_library",
        "//go/store/spec:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
