load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "commit.go",
        "commit_options.go",
        "database.go",
        "database_common.go",
        "dataset.go",
        "pull.go",
        "puller.go",
        "serialize_hashes.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/datas",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/atomicerr:go_default_library",
        "//go/store/chunks:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/merge:go_default_library",
        "//go/store/nbs:go_default_library",
        "//go/store/nomdl:go_default_library",
        "//go/store/types:go_default_library",
        "//go/store/util/random:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "commit_test.go",
        "database_test.go",
        "dataset_test.go",
        "pull_test.go",
        "puller_test.go",
        "serialize_hashes_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/store/atomicerr:go_default_library",
        "//go/store/chunks:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/merge:go_default_library",
        "//go/store/nbs:go_default_library",
        "//go/store/nomdl:go_default_library",
        "//go/store/types:go_default_library",
        "//go/store/util/clienttest:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
