load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apply_patch.go",
        "diff.go",
        "patch.go",
        "print_diff.go",
        "summary.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/diff",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/atomicerr:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/datas:go_default_library",
        "//go/store/types:go_default_library",
        "//go/store/util/status:go_default_library",
        "//go/store/util/writers:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "apply_patch_test.go",
        "diff_test.go",
        "patch_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/store/atomicerr:go_default_library",
        "//go/store/chunks:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/marshal:go_default_library",
        "//go/store/types:go_default_library",
        "//go/store/util/test:go_default_library",
        "//go/store/util/writers:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
