load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "base32.go",
        "hash.go",
        "hash_slice.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/hash",
    visibility = ["//visibility:public"],
    deps = ["//go/store/d:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "base32_test.go",
        "hash_slice_test.go",
        "hash_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
