load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "candidate.go",
        "three_way.go",
        "three_way_list.go",
        "three_way_ordered_sequence.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/merge",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/atomicerr:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/types:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "three_way_keyval_test.go",
        "three_way_list_test.go",
        "three_way_set_test.go",
        "three_way_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/store/chunks:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/types:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
