load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["histogram.go"],
    importpath = "github.com/liquidata-inc/dolt/go/store/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/d:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["histogram_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
