load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sloppy.go"],
    importpath = "github.com/liquidata-inc/dolt/go/store/sloppy",
    visibility = ["//visibility:public"],
    deps = ["//go/store/d:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["sloppy_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_snappy//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
