load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "absolute_path.go",
        "commit_meta.go",
        "spec.go",
        "util.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/spec",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/chunks:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/datas:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/nbs:go_default_library",
        "//go/store/types:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_juju_gnuflag//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "absolute_path_test.go",
        "commit_meta_test.go",
        "spec_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/store/chunks:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/datas:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/nbs:go_default_library",
        "//go/store/types:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
