load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apply_map_edits.go",
        "blob.go",
        "blob_leaf_sequence.go",
        "bool.go",
        "codec.go",
        "collection.go",
        "common_supertype.go",
        "dumb_edit_accumulator.go",
        "edit_distance.go",
        "encode_human_readable.go",
        "float.go",
        "float_util.go",
        "format.go",
        "get_hash.go",
        "indexed_sequence_diff.go",
        "indexed_sequences.go",
        "inlineblob.go",
        "int.go",
        "kvp.go",
        "leaf_sequence.go",
        "less.go",
        "list.go",
        "list_editor.go",
        "list_iterator.go",
        "list_leaf_sequence.go",
        "make_type.go",
        "map.go",
        "map_editor.go",
        "map_iterator.go",
        "map_leaf_sequence.go",
        "marshal_error.go",
        "meta_sequence.go",
        "noms_kind.go",
        "null_value.go",
        "ordered_sequences.go",
        "ordered_sequences_diff.go",
        "path.go",
        "ref.go",
        "ref_heap.go",
        "rolling_value_hasher.go",
        "sequence.go",
        "sequence_chunker.go",
        "sequence_concat.go",
        "sequence_cursor.go",
        "set.go",
        "set_editor.go",
        "set_iterator.go",
        "set_leaf_sequence.go",
        "simplify.go",
        "sort.go",
        "string.go",
        "struct.go",
        "subtype.go",
        "timestamp.go",
        "tuple.go",
        "type.go",
        "type_desc.go",
        "uint.go",
        "uuid.go",
        "validate_type.go",
        "validating_decoder.go",
        "value.go",
        "value_decoder.go",
        "value_stats.go",
        "value_store.go",
        "walk.go",
        "walk_refs.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/store/types",
    visibility = ["//visibility:public"],
    deps = [
        "//go/store/atomicerr:go_default_library",
        "//go/store/chunks:go_default_library",
        "//go/store/constants:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/sloppy:go_default_library",
        "//go/store/util/functions:go_default_library",
        "//go/store/util/sizecache:go_default_library",
        "//go/store/util/writers:go_default_library",
        "@com_github_araddon_dateparse//:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_kch42_buzhash//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "blob_test.go",
        "codec_test.go",
        "collection_test.go",
        "common_supertype_test.go",
        "compare_test.go",
        "edit_distance_test.go",
        "encode_human_readable_test.go",
        "encoding_test.go",
        "equals_test.go",
        "incremental_test.go",
        "list_editor_test.go",
        "list_iterator_test.go",
        "list_test.go",
        "map_iterator_test.go",
        "map_test.go",
        "must_test.go",
        "ordered_sequences_diff_test.go",
        "path_test.go",
        "primitives_test.go",
        "ref_heap_test.go",
        "ref_test.go",
        "sequence_cursor_test.go",
        "set_iterator_test.go",
        "set_test.go",
        "simplify_test.go",
        "string_test.go",
        "struct_test.go",
        "subtype_test.go",
        "tuple_test.go",
        "type_test.go",
        "util_test.go",
        "validating_decoder_test.go",
        "value_store_test.go",
        "walk_refs_test.go",
        "walk_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/store/atomicerr:go_default_library",
        "//go/store/chunks:go_default_library",
        "//go/store/d:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/util/test:go_default_library",
        "//go/store/util/writers:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
