load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/liquidata-inc/dolt/go/utils/copyrightshdrs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "copyrightshdrs",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
