load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cscache.go",
        "grpc.go",
        "http.go",
        "main.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/utils/remotesrv",
    visibility = ["//visibility:private"],
    deps = [
        "//go/gen/proto/dolt/services/remotesapi/v1alpha1:go_default_library",
        "//go/libraries/doltcore/remotestorage:go_default_library",
        "//go/libraries/utils/filesys:go_default_library",
        "//go/libraries/utils/iohelp:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/nbs:go_default_library",
        "//go/store/types:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_binary(
    name = "remotesrv",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
