load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "add.go",
        "blame.go",
        "branch.go",
        "checkout.go",
        "clone.go",
        "commit.go",
        "config.go",
        "diff.go",
        "doc.go",
        "fetch.go",
        "init.go",
        "log.go",
        "login.go",
        "ls.go",
        "merge.go",
        "pull.go",
        "push.go",
        "remote.go",
        "reset.go",
        "select_where.go",
        "send_metrics.go",
        "sql.go",
        "status.go",
        "utils.go",
        "version.go",
    ],
    importpath = "github.com/liquidata-inc/dolt/go/cmd/dolt/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//go/cmd/dolt/cli:go_default_library",
        "//go/cmd/dolt/errhand:go_default_library",
        "//go/gen/proto/dolt/services/remotesapi/v1alpha1:go_default_library",
        "//go/libraries/doltcore:go_default_library",
        "//go/libraries/doltcore/creds:go_default_library",
        "//go/libraries/doltcore/dbfactory:go_default_library",
        "//go/libraries/doltcore/diff:go_default_library",
        "//go/libraries/doltcore/doltdb:go_default_library",
        "//go/libraries/doltcore/env:go_default_library",
        "//go/libraries/doltcore/env/actions:go_default_library",
        "//go/libraries/doltcore/env/actions/commitwalk:go_default_library",
        "//go/libraries/doltcore/merge:go_default_library",
        "//go/libraries/doltcore/ref:go_default_library",
        "//go/libraries/doltcore/remotestorage:go_default_library",
        "//go/libraries/doltcore/row:go_default_library",
        "//go/libraries/doltcore/rowconv:go_default_library",
        "//go/libraries/doltcore/schema:go_default_library",
        "//go/libraries/doltcore/sql:go_default_library",
        "//go/libraries/doltcore/sqle:go_default_library",
        "//go/libraries/doltcore/sqle/types:go_default_library",
        "//go/libraries/doltcore/table/pipeline:go_default_library",
        "//go/libraries/doltcore/table/untyped:go_default_library",
        "//go/libraries/doltcore/table/untyped/fwt:go_default_library",
        "//go/libraries/doltcore/table/untyped/nullprinter:go_default_library",
        "//go/libraries/doltcore/table/untyped/tabular:go_default_library",
        "//go/libraries/events:go_default_library",
        "//go/libraries/utils/argparser:go_default_library",
        "//go/libraries/utils/config:go_default_library",
        "//go/libraries/utils/earl:go_default_library",
        "//go/libraries/utils/editor:go_default_library",
        "//go/libraries/utils/filesys:go_default_library",
        "//go/libraries/utils/iohelp:go_default_library",
        "//go/libraries/utils/mathutil:go_default_library",
        "//go/libraries/utils/osutil:go_default_library",
        "//go/libraries/utils/set:go_default_library",
        "//go/libraries/utils/strhelp:go_default_library",
        "//go/store/atomicerr:go_default_library",
        "//go/store/datas:go_default_library",
        "//go/store/hash:go_default_library",
        "//go/store/types:go_default_library",
        "@com_github_abiosoft_readline//:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_flynn_archive_go_shlex//:go_default_library",
        "@com_github_jedib0t_go_pretty//table:go_default_library",
        "@com_github_liquidata_inc_dolt_go_gen_proto_dolt_services_eventsapi//v1alpha1:go_default_library",
        "@com_github_liquidata_inc_ishell//:go_default_library",
        "@com_github_skratchdot_open_golang//open:go_default_library",
        "@com_github_src_d_go_mysql_server//:go_default_library",
        "@com_github_src_d_go_mysql_server//sql:go_default_library",
        "@io_vitess_vitess//go/vt/sqlparser:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "add_reset_rm_commit_test.go",
        "blame_test.go",
        "commands_test.go",
        "commit_test.go",
        "config_test.go",
        "init_test.go",
        "log_test.go",
        "remote_test.go",
        "sql_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/cmd/dolt/cli:go_default_library",
        "//go/libraries/doltcore/dbfactory:go_default_library",
        "//go/libraries/doltcore/doltdb:go_default_library",
        "//go/libraries/doltcore/dtestutils:go_default_library",
        "//go/libraries/doltcore/env:go_default_library",
        "//go/libraries/doltcore/row:go_default_library",
        "//go/libraries/doltcore/table:go_default_library",
        "//go/libraries/doltcore/table/typed/noms:go_default_library",
        "//go/libraries/utils/config:go_default_library",
        "//go/libraries/utils/filesys:go_default_library",
        "//go/libraries/utils/osutil:go_default_library",
        "//go/libraries/utils/set:go_default_library",
        "//go/store/types:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
